# laba08

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile  README.md
.github/workflows/: CI.yml
arts/: lab06_home-0.1.0.0.deb
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt
